--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2.3rem;
+    line-height: 1.4
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
 p {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -24,10 +25,22 @@ body {
     text-align: center;
 }
 
+main.thanksContainer {
+    display:flex;
+    flex:1;
+    background: rgba(46, 141, 27, 0.253);
+
+    padding: 10%;
+
+}
+
 .signUpThanks {
     flex: 1;
     align-content: center;
     background: rgba(46, 141, 27, 0.253);
+    border: 1px solid rgb(155, 62, 231);
+    box-shadow: 0 0 0.5rem 0.5rem rgba(155, 62, 231, 0.301);
+    border-radius: 5rem;
 }
 
 #leftSide {
